update to littlekt 0.11.0 and min JDK 22